fixing average watt and total watt